[tool.poetry]
name = "repl_python3_equitycracker"
version = "0.1.0"
description = ""
authors = ["Cxyder <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-webhook = "^0.16.3"
psutil = "^5.9.1"
web3 = "^5.29.1"
keep-repl-alive = "^1.4"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
